# modern_cmake

./: .gitmodules  README.md
chpt1/: CMakeLists.txt  README.md  build.sh
chpt11/: CMakeLists.txt  CalcConfig.cmake.in  build.sh
chpt11/find_package/: CMakeLists.txt
chpt11/src/: CMakeLists.txt  run.cpp
chpt11/test/: CMakeLists.txt
chpt12/: CMakeLists.txt  CalcConfig.cmake.in  build.sh
chpt12/cmake/: BuildInfo.cmake  Format.cmake  GetFTXUI.cmake  Install.cmake  Testing.cmake
chpt12/src/calc/: CMakeLists.txt  calc.cpp
chpt12/src/calc/include/calc/: calc.h
chpt12/src/calc_console/: CMakeLists.txt  tui.cpp
chpt12/test/: CMakeLists.txt
chpt12/test/calc/: calc_test.cpp
chpt12/test/calc_console/: CMakeLists.txt
chpt2/: basic.cmake  controlflow_if.cmake  controlflow_loop.cmake  function_and_macro.cmake  list.cmake  run.sh  useful_commands.cmake  variable.cmake  variable_scope.cmake
chpt2/environment/: CMakeLists.txt  build.sh
chpt3/: CMakeLists.txt  main.cpp
chpt3/cars/: car.cpp  car.h
chpt3/src/: CMakeLists.txt
chpt3/src/car_app/: CMakeLists.txt  main.cpp
chpt3/src/car_lib/: CMakeLists.txt  car.h  cars.cmake
chpt3/src/race_car_app/: CMakeLists.txt  main.cpp
chpt3/src/race_car_lib/: CMakeLists.txt  race_car.cpp  race_car.h
chpt4/: CMakeLists.txt  build.sh  calculations.cpp  calculations.h  custom_command.cpp  drawing.h  empty.cpp
chpt5/: CMakeLists.txt  configure.h.in  gui_linux.cpp  gui_windows.cpp  main.cpp  test.h
chpt6/: CMakeLists.txt  func_lib.cpp  linka.cpp  linkb.cpp  main.cpp  run.sh
chpt7/: CMakeLists.txt  build.sh  message.cpp  message.proto  requirements.sh  yaml_config.cpp
chpt7/cmake/module/: FindPQXX.cmake
chpt8/: CMakeLists.txt  build.sh
chpt8/cmake/: Coverage.cmake
chpt8/src/: CMakeLists.txt  bootstrap.cpp  calc.cpp  calc.h  rng.cpp  rng.h  run.cpp
chpt8/test/: CMakeLists.txt  catch2_test.cpp  gtest_test.cpp  run_test.cpp  unit_test.cpp
chpt8/test/mocks/: rng_mock.h
chpt9/: CMakeLists.txt  build.sh
chpt9/cmake/: ClangTidy.cmake  Format.cmake  Memcheck.cmake  Valgrind.cmake
chpt9/src/: CMakeLists.txt  header.h  main.cpp
